# ucuenca-practicas-preprofesionales-py

./: .gitignore  README.md  main.py  pyproject.toml
src/controllers/: __init__.py  administrador_controller.py  coordinador.py  coordinador_controller.py  empresa.py  empresa_controller.py  estudiante.py  estudiante_controller.py  login.py  login_controller.py  router.py  tutor.py  tutor_academico_controller.py  tutor_empresarial_controller.py
src/models/: __init__.py  empresa.py  estados.py  persona.py  practica.py  solicitud.py  usuario.py
src/repositories/: __init__.py  actividad_repository.py  administrador_repository.py  carta_compromiso.py  carta_compromiso_repository.py  convenio_repository.py  coordinador_repository.py  empresa.py  empresa_repository.py  estudiante.py  estudiante_repository.py  formulario.py  formulario_repository.py  oferta.py  oferta_repository.py  postulacion.py  postulacion_repository.py  practica.py  practica_repository.py  solicitud_autorizacion.py  solicitud_autorizacion_repository.py  solicitud_oficio.py  solicitud_oficio_repository.py  tutor_academico_repository.py  tutor_empresarial_repository.py  usuario_repository.py
src/services/: __init__.py  administrador_main_service.py  autenticacion_service.py  coordinador_main_service.py  empresa_main_service.py  estudiante.py  estudiante_main_service.py  exceptions.py  login_main_service.py  oferta_service.py  postulacion.py  postulacion_service.py  practica.py  practica_service.py  tutor_academico_main_service.py  tutor_empresarial_main_service.py
src/utils/: ayuda_dialog.py  (+3 more)
(+74 files in other folders)
