[project]
name = "sgpp"
version = "0.1.0"
description = "Sistema de Gestión de Prácticas Preprofesionales (SGPP)"
requires-python = ">=3.12"
dependencies = [
    "pyqt6>=6.6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-qt>=4.4.0",
    "ruff>=0.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = []
